Added buttons and constraints

--- a/TicTacToeIOS/TicTacToeIOS/Main.storyboard
+++ b/TicTacToeIOS/TicTacToeIOS/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="11144">
     <device id="retina3_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -152,7 +152,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9690" translatesAutoresizingMaskIntoConstraints="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES">
-                                <rect key="frame" x="80" y="62" width="80" height="107"/>
+                                <rect key="frame" x="80.5" y="62.5" width="80" height="107"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="New Game">
@@ -167,6 +167,28 @@
                                     <constraint id="10839" firstItem="9690" firstAttribute="width" constant="80"/>
                                     <constraint id="10840" firstItem="9690" firstAttribute="height" constant="107"/>
                                 </constraints>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="11347" translatesAutoresizingMaskIntoConstraints="NO" autoresizesSubviews="NO">
+                                <rect key="frame" x="344" y="66.5" width="80" height="29"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="Score Board">
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                                <connections>
+                                    <action selector="NewGameButton_TouchUpInside:" destination="11349" id="11348" eventType="touchUpInside"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="11703" translatesAutoresizingMaskIntoConstraints="NO" autoresizesSubviews="NO" misplaced="YES">
+                                <rect key="frame" x="344" y="138" width="80" height="29"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="About TTT">
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                                <connections>
+                                    <action selector="NewGameButton_TouchUpInside:" destination="11705" id="11704" eventType="touchUpInside"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
@@ -201,6 +223,14 @@
                             <constraint id="9689" firstItem="249" firstAttribute="centerY" secondItem="197" secondAttribute="bottom" constant="71"/>
                             <constraint id="9697" firstItem="197" firstAttribute="leading" secondItem="9690" secondAttribute="centerX" constant="68"/>
                             <constraint id="9698" firstItem="8bC-Xf-vdC" firstAttribute="centerY" secondItem="9690" secondAttribute="centerY" constant="44"/>
+                            <constraint id="11353" firstItem="11347" firstAttribute="centerY" secondItem="1563" secondAttribute="centerY" constant="34"/>
+                            <constraint id="11354" firstItem="8bC-Xf-vdC" firstAttribute="centerX" secondItem="11347" secondAttribute="centerX" constant="46"/>
+                            <constraint id="11355" firstItem="1563" firstAttribute="centerY" secondItem="11347" secondAttribute="centerY" constant="33"/>
+                            <constraint id="11356" firstItem="11347" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="144"/>
+                            <constraint id="11706" firstItem="11703" firstAttribute="centerY" secondItem="1563" secondAttribute="centerY" constant="33"/>
+                            <constraint id="11707" firstItem="11703" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="53"/>
+                            <constraint id="11708" firstItem="11703" firstAttribute="centerY" secondItem="1563" secondAttribute="centerY" constant="38"/>
+                            <constraint id="11709" firstItem="11703" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="144"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -215,6 +245,14 @@
                                 <exclude reference="9689"/>
                                 <exclude reference="9697"/>
                                 <exclude reference="9698"/>
+                                <exclude reference="11353"/>
+                                <exclude reference="11354"/>
+                                <exclude reference="11355"/>
+                                <exclude reference="11356"/>
+                                <exclude reference="11706"/>
+                                <exclude reference="11707"/>
+                                <exclude reference="11708"/>
+                                <exclude reference="11709"/>
                             </mask>
                             <mask key="subviews">
                                 <exclude reference="249"/>
@@ -230,6 +268,10 @@
                                 <include reference="9689"/>
                                 <include reference="9697"/>
                                 <include reference="9698"/>
+                                <include reference="11355"/>
+                                <include reference="11356"/>
+                                <include reference="11708"/>
+                                <include reference="11709"/>
                             </mask>
                             <mask key="subviews">
                                 <include reference="1563"/>
@@ -256,6 +298,10 @@
                                 <include reference="7713"/>
                                 <include reference="8695"/>
                                 <include reference="8696"/>
+                                <include reference="11353"/>
+                                <include reference="11354"/>
+                                <include reference="11706"/>
+                                <include reference="11707"/>
                             </mask>
                         </variation>
                     </view>
@@ -272,11 +318,29 @@
                         <outlet property="newGameButton" destination="249" id="name-outlet-249"/>
                         <outlet property="winnerLabel" destination="1563" id="name-outlet-1563"/>
                         <outlet property="NewGameButton2" destination="9690" id="name-outlet-9690"/>
+                        <outlet property="ScoreBoardButton" destination="11347" id="name-outlet-11347"/>
+                        <outlet property="AboutButton" destination="11703" id="name-outlet-11703"/>
                     </connections>
+                    <navigationItem title="Title" id="11237" key="navigationItem"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-32" y="13"/>
+            <point key="canvasLocation" x="-311" y="-208"/>
+        </scene>
+        <scene sceneID="11143">
+            <objects>
+                <navigationController id="11144" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="11146">
+                        <rect key="frame" x="0.0" y="20" width="480" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue id="11238" destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="11147" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-722" y="-203"/>
         </scene>
     </scenes>
 </document>
