--- a/TicTacToeIOS/TicTacToeIOS/Main.storyboard
+++ b/TicTacToeIOS/TicTacToeIOS/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="11144">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="16431">
     <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -324,25 +324,12 @@
                         <outlet property="AboutButton" destination="11703" id="name-outlet-11703"/>
                     </connections>
                     <navigationItem id="11237" key="navigationItem" title="Home"/>
+                    <tabBarItem key="tabBarItem" title="Home" id="17623"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-311" y="-208"/>
-        </scene>
-        <scene sceneID="11143">
-            <objects>
-                <navigationController id="11144" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="11146">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue id="11238" destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="11147" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-722" y="-203"/>
+            <point key="canvasLocation" x="-799" y="-16"/>
         </scene>
         <scene sceneID="14581">
             <objects>
@@ -389,10 +376,12 @@
                     <connections>
                         <outlet property="AboutViewController" destination="14583" id="name-outlet-14583"/>
                     </connections>
+                    <tabBarItem key="tabBarItem" title="About" id="17803"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14584" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="92" y="-568"/>
+            <point key="canvasLocation" x="-454" y="284"/>
         </scene>
         <scene sceneID="14588">
             <objects>
@@ -455,10 +444,74 @@
                         <outlet property="OScoreOutputLabel" destination="16088" id="name-outlet-16088"/>
                         <outlet property="ScoreBoardViewController" destination="14590" id="name-outlet-14590"/>
                     </connections>
+                    <tabBarItem key="tabBarItem" title="Scores" id="17709"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14591" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="94" y="-36"/>
+            <point key="canvasLocation" x="-451" y="-286"/>
+        </scene>
+        <scene sceneID="16430">
+            <objects>
+                <tabBarController id="16431" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="16434">
+                        <rect key="frame" x="0.0" y="431" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue id="17530" destination="16442" kind="relationship" relationship="viewControllers"/>
+                        <segue id="17624" destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers"/>
+                        <segue id="17710" destination="14589" kind="relationship" relationship="viewControllers"/>
+                        <segue id="17804" destination="14582" kind="relationship" relationship="viewControllers"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="16435" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1558" y="-12"/>
+        </scene>
+        <scene sceneID="16441">
+            <objects>
+                <viewController id="16442" sceneMemberID="viewController" customClass="ViewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="16439"/>
+                        <viewControllerLayoutGuide type="bottom" id="16440"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="16443">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" id="18128" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="0.0" y="244" width="320" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="18129" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" text="Please choose your location of play." numberOfLines="2">
+                                <rect key="frame" x="46" y="144" width="249" height="54"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="19043" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="63" y="89" width="195" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="City" id="17529"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="CityPicker" destination="18128" id="name-outlet-18128"/>
+                        <outlet property="cityLabel" destination="19043" id="name-outlet-19043"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="16444" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1182" y="-17"/>
         </scene>
     </scenes>
 </document>
